# lexigrok

./: .geminiignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pyrightconfig.json
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: schemas.py
backend/scripts/: dev-server.sh  generate-env.sh
backend/src/lexigrok/: __init__.py  config.py  crud.py  database.py  exceptions.py  main.py  models.py  schemas.py  security.py  storage.py  users.py
backend/src/lexigrok/auth/: dependencies.py  models.py  router.py  schemas.py  service.py
backend/src/lexigrok/conversation/: __init__.py  models.py  router.py  schemas.py  service.py
backend/src/lexigrok/generation/: openai_strategy.py  strategy.py
backend/src/lexigrok/topics/: __init__.py  models.py  router.py  schemas.py  service.py
backend/src/lexigrok/translation/: models.py  router.py  schemas.py  service.py
backend/src/lexigrok/upload/: dependencies.py  router.py  schemas.py  service.py
backend/tests/: test_auth.py  test_main.py
frontend/: Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/.husky/: pre-commit
frontend/src/: App.tsx  main.tsx  routeTree.gen.ts
frontend/src/components/: ContextualTranslationPopup.tsx  ConversationHistory.tsx  ImageUploadView.tsx  MessageBubble.tsx  PracticeView.tsx  SuggestionPrompt.tsx  SuggestionView.tsx  TopicCard.tsx  TopicSelectionView.tsx  TopicSelector.tsx  TranslationSidebar.tsx  UserInput.tsx
frontend/src/lib/: auth.tsx  authContext.ts  hooks.ts
(+13 files in other folders)
