[project]
name = "lexigrok"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tim Dumol", email = "tim@timdumol.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard-no-fastapi-cloud-cli]>=0.116.1",
]

[project.scripts]
lexigrok = "lexigrok:main"

[build-system]
requires = ["uv_build>=0.7.20,<0.8.0"]
build-backend = "uv_build"
